# hackrf-spectrum-analyzer

./: .gitignore  CHANGELOG-FROM-FORK.md  CHANGELOG.md  Readme.md  TODO-WIFI-PHASE-1.md  TODO-WIFI-PHASE-2.md  build.gradle.kts  settings.gradle.kts
src/hackrf-sweep/: presets.csv
src/hackrf-sweep/freq/: Sweden.csv  Wi-Fi channel grid.csv  Zigbee 2.4 GHz.csv
src/hackrf-sweep/native/: .gitignore  BUILD_NATIVE.md  CMakeLists.txt  HARDWARE_SMOKE_TEST.md  hackrf_sweep.h  hackrf_sweep_lib.c
src/hackrf-sweep/src-java-test/jspectrumanalyzer/core/: DatasetSpectrumPeakTest.java  FrequencyPlanTest.java  SpurFilterTest.java
src/hackrf-sweep/src-java-test/jspectrumanalyzer/fx/engine/: SpectrumEngineLifecycleTest.java
src/hackrf-sweep/src-java-test/jspectrumanalyzer/fx/frequency/: FrequencyRangeValidatorTest.java
src/hackrf-sweep/src-java-test/jspectrumanalyzer/fx/util/: FxControlsTest.java
src/hackrf-sweep/src-java-test/jspectrumanalyzer/nativebridge/: HackRFSweepNativeBridgeLoadTest.java
src/hackrf-sweep/src-java-test/jspectrumanalyzer/wifi/: RfChannelLookupTest.java
src/hackrf-sweep/src-java-test/jspectrumanalyzer/wifi/capture/: BeaconStoreTest.java  CaptureStatsTest.java  RadiotapDecoderTest.java  WlanHelperTest.java
src/hackrf-sweep/src-java-test/jspectrumanalyzer/wifi/capture/ieee80211/: BeaconParserTest.java
src/hackrf-sweep/src-java-test/shared/mvc/: ModelValueTest.java
src/hackrf-sweep/src-java/hackrfsweep/: HackrfSweepLibrary.java
src/hackrf-sweep/src-java/jspectrumanalyzer/core/: DatasetSpectrum.java  DatasetSpectrumPeak.java  FrequencyAllocationTable.java  FrequencyAllocations.java  FrequencyMultiRangePreset.java  FrequencyPlan.java  FrequencyPresets.java  HackRFSettings.java  PersistentDisplay.java  SpurFilter.java
src/hackrf-sweep/src-java/jspectrumanalyzer/core/jfc/: XYSeriesImmutable.java
src/hackrf-sweep/src-java/jspectrumanalyzer/fx/: FxApp.java  Main.java  MainWindow.java
src/hackrf-sweep/src-java/jspectrumanalyzer/fx/chart/: AllocationOverlayCanvas.java  ApMarkerCanvas.java  ChartZoomController.java  FadeMaxHoldRenderer.java  GraphTheme.java  LegendOverlay.java  PersistentDisplayController.java  SpectrumChart.java  StitchedNumberAxis.java  WaterfallCanvas.java
src/hackrf-sweep/src-java/jspectrumanalyzer/fx/engine/: SdrController.java  SpectrumEngine.java  SpectrumFrame.java  SpectrumRecorder.java
src/hackrf-sweep/src-java/jspectrumanalyzer/fx/frequency/: FrequencyRangeSelector.java  FrequencyRangeValidator.java
src/hackrf-sweep/src-java/jspectrumanalyzer/fx/model/: FxModelBinder.java  SettingsStore.java
src/hackrf-sweep/src-java/jspectrumanalyzer/fx/theme/: dark.css
src/hackrf-sweep/src-java/jspectrumanalyzer/fx/ui/: ApHealthTable.java  ApTrendChart.java  BssLoadTable.java  CaptureInsightCard.java  ChannelOccupancyView.java  ChartToolbar.java  CustomMultiRangeEditor.java  DensityChartView.java  DeviceSection.java  DisplayTab.java  FrameTypeBar.java  InterfererListView.java  MonitorCapturePanel.java  ParamsTab.java  RecordingTab.java  ScanTab.java  TopTalkersTable.java  WifiInsightCard.java  WifiTab.java  WifiWindow.java
src/hackrf-sweep/src-java/jspectrumanalyzer/fx/util/: FxCoalescingDispatcher.java  FxControls.java
src/hackrf-sweep/src-java/jspectrumanalyzer/nativebridge/: DeviceBusyException.java  HackRFDeviceInfo.java  HackRFSweepNativeBridge.java
src/hackrf-sweep/src-java/jspectrumanalyzer/ui/: GradientPalette.java  GraphicsToolkit.java  WaterfallPalette.java
src/hackrf-sweep/src-java/jspectrumanalyzer/util/: HealthMonitor.java
src/hackrf-sweep/src-java/jspectrumanalyzer/wifi/: ChannelInterferenceService.java  ChannelOccupancyService.java  DensityHistogramService.java  InterfererClassifier.java  NoOpWifiScanner.java  RfChannelLookup.java  WifiAccessPoint.java  WifiAdapter.java  WifiChannelCatalog.java  WifiScanService.java  WifiScanner.java  WifiScannerFactory.java  WindowsWlanScanner.java
src/hackrf-sweep/src-java/jspectrumanalyzer/wifi/capture/: BeaconStore.java  CaptureStats.java  MonitorAdapter.java  MonitorCaptureFactory.java  MonitorModeCapture.java  MonitorModeException.java  NoOpMonitorCapture.java  Pcap4jMonitorCapture.java  RadiotapDecoder.java  RadiotapFrame.java  WlanHelper.java
src/hackrf-sweep/src-java/jspectrumanalyzer/wifi/capture/ieee80211/: BeaconBody.java  BeaconParser.java  BssLoad.java  IeWalker.java  InformationElement.java
src/hackrf-sweep/src-java/jspectrumanalyzer/wifi/win32/: WifiIeParser.java  Wlanapi.java
src/hackrf-sweep/src-java/shared/mvc/: ModelValue.java
tools/: convert-sweden.ps1
